--- a/code/main.html
+++ b/code/main.html
@@ -40,7 +40,24 @@ main()
 </head>
 
 <body>
-    Button Position <br>
+    <button id="TheStarryNight" class="btn"><img src="button/TheStarryNight.png" class="btn_img"></button>
+    <button id="OliveTree" class="btn"><img src="button/OliveTree.png" class="btn_img"></button>
+    <button id="MonaLisa" class="btn"><img src="button/MonaLisa.png" class="btn_img"></button>
+    <button id="Lapie" class="btn"><img src="button/Lapie.png" class="btn_img"></button>
+    <button id="Guernica" class="btn"><img src="button/Guernica.png" class="btn_img"></button>
+    <button id="WaterLilies" class="btn"><img src="button/WaterLilies.png" class="btn_img"></button>
+    <button id="WomanWithAParasol" class="btn"><img src="button/WomanWithAParasol.png" class="btn_img"></button>
+    <button id="TheDanceClass" class="btn"><img src="button/TheDanceClass.png" class="btn_img"></button>
+    
+    <p></p>
+    <button id="VenusDeMilo" class="btn"><img src="button/VenusDeMilo.png" class="btn_img"></button>
+    <button id="Discobolus" class="btn"><img src="button/Discobolus.png" class="btn_img"></button>
+    <button id="David" class="btn"><img src="button/David.png" class="btn_img"></button>
+    <button id="TheThinker" class="btn"><img src="button/TheThinker.png" class="btn_img"></button>
+    <button id="Pieta" class="btn"><img src="button/Pieta.png" class="btn_img"></button>
+    <button id="Grabfigur" class="btn"><img src="button/Grabfigur.png" class="btn_img"></button>
+
+
 <canvas id="gl-canvas" width="1280" height="720">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
